--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Irvine's Just Beyond Paradise</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Free HTML5 Template by FREEHTML5.CO" />
-	<meta name="keywords" content="free html5, free template, free bootstrap, html5, css3, mobile first, responsive" />
+	<meta name="description" content="Winery and Herbal Tea Ranch" />
+	<meta name="keywords" content="wine, herbal tea, event space" />
 	<meta name="author" content="FREEHTML5.CO" />
 
   <!-- 
@@ -67,7 +67,7 @@
 	6. brown.css
 	7. green.css
 
-	
+
 	-->
 	<link rel="stylesheet" href="css/style.css">
 
@@ -317,7 +317,7 @@
 						</div>
 				</div>
 				<div class="col-md-8 to-animate">
-					<img src="images/img_1.jpg" class="img-responsive img-rounded" alt="Free HTML5 Template">
+					<img src="images/img_1.jpg" class="img-responsive img-rounded">
 				</div>
 				<div class="col-md-4 to-animate">
 					<h2>Fine Wine Takes Time and Irvines</h2>
