Add image of parents

--- a/index.html
+++ b/index.html
@@ -317,13 +317,13 @@
 						</div>
 				</div>
 				<div class="col-md-8 to-animate">
-					<img src="images/img_1.jpg" class="img-responsive img-rounded">
+					<img src="images/vineyard.jpg" class="img-responsive img-rounded">
 				</div>
 				<div class="col-md-4 to-animate">
 					<h2>Fine Wine Takes Time and Irvines</h2>
 					<p>Ed Irvine started making wine with his wife Cindy about a decade ago. His life has been spent working on Kansas fields, prairies, ranches, and with the soil which is foundation for all agriculture. Kansas State is his 
 						alma mater, having graduated with a degree in soil science; Agronomy. Since starting their journey in winemaking, Ed and Cindy have been making anything from Dandelion to Pear wine. Winemaking requires a firm understanding 
-						of the agriculture and the science of fermentation. His son Ed junior graduated with a degree in biology and performs precise experimentation on every batch of wine in the laboratory.
+						of the agriculture and the science of fermentation. His son Ed junior graduated with a degree in microbiology and performs precise experimentation on every batch of wine in the laboratory.
 					</p>
 					<!-- <p><a href="#" class="btn btn-primary">Meet the team</a></p> -->
 				</div>
